# gdrive-cli

./: .gitignore  .goreleaser.yml  CLAUDE.md  Makefile  PROJECT_PROMPT.md  README.md  RFC_ Log Ingestion Pipeline.docx  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/gdrive-cli/: auth.go  auth_check.go  auth_login.go  auth_status.go  auth_test.go  fetch.go  fetch_test.go  integration_test.go  print.go  root.go  search.go  search_test.go  version.go
docs/: PLAN.md
internal/api/: api.go  api_test.go  client.go  comments.go  comments_test.go  errors.go  export.go  metadata.go  search.go  types.go
internal/auth/: auth.go  auth_test.go  login.go  token.go
internal/cache/: cache.go  cache_test.go  entry.go  slug.go  store.go
internal/config/: config.go  config_test.go
internal/formatting/: filename.go  filename_test.go  formatting.go  mime.go  mime_test.go  query.go  query_test.go  url.go  url_test.go
internal/output/: comments.go  comments_test.go  convert.go  convert_test.go  format.go  format_test.go  output.go  output_test.go
internal/progress/: counter.go  progress.go  progress_test.go  spinner.go
internal/ratelimit/: backoff.go  ratelimit.go  ratelimit_test.go  transport.go
internal/table/: table.go
src/gdrive_cli/: __main__.py  api.py  auth.py  cli.py  config.py  formatting.py
tasks/backlog/: 05b-search-trashed-filter.md
tasks/done/: 01-go-project-scaffold.md  02-config-and-testing-infra.md  02b-github-actions-ci.md  03-formatting-utilities.md  05-drive-api-wrapper.md  (+15 more)
tests/: test_commands.py  test_formatting.py
(+4 files in other folders)
